--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "ai-tab-manager",
   "version": "1.0.0",
-  "description": "AI-powered tab manager using Gemini",
-  "main": "background.js",
-  "dependencies": {
-    "@google/generative-ai": "^0.1.0"
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "type": "module"
+  "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.17",
+    "@types/chrome": "^0.0.254",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
+  }
 }
